<resources>
    <string name="app_name">Snooker Improver</string>
    <string name="title_home">Home</string>
    <string name="title_info">Routine Info</string>
    <string name="title_add_score">Add Score</string>
    <string name="title_stats">Stats</string>
    <string-array name="all_routine_names">
        <item>The Line Up</item>
        <item>The T Line Up</item>
        <item>10 Red T Line Up</item>
        <item>7 Red T Line Up</item>
        <item>Clearing the Colours</item>
    </string-array>
    <string name="routine_1">The Line Up</string>
    <string-array name="routine_1_desc_array">
        <item>Arrange all reds in a line up the middle of the table, in line with the blue, pink, and black spots.</item>
        <item>Pot the balls in order (i.e. red, colour, red, and so on), trying to make as high a break as possible.</item>
        <item>Can you clear the table?</item>
    </string-array>
    <string name="routine_2">The T Line Up</string>
    <string-array name="routine_2_desc_array">
        <item>Arrange the reds in three lines of five reds, first between pink and black, then either side of the pink, to form a "T" shape.</item>
        <item>Pot the balls in order (i.e. red, colour, red, and so on), trying to make as high a break as possible.</item>
        <item>In this routine, all reds are nearer the pink and black, so this replicates what you might see in a match, more than the Line Up would.</item>
        <item>Can you clear the table?</item>
    </string-array>
    <string name="routine_3">10 Red T Line Up</string>
    <string-array name="routine_3_desc_array">
        <item>A slight variation on the T Line Up. Put four reds in a line between pink and black, then three either side of the pink, to make 10 reds in total.</item>
        <item>Pot the balls in order (i.e. red, colour, red, and so on), trying to make as high a break as possible.</item>
        <item>Can you clear the table?</item>
    </string-array>
    <string name="routine_4">7 Red T Line Up</string>
    <string-array name="routine_4_desc_array">
        <item>A slight variation on the T Line Up. Put three reds in a line between pink and black, then two either side of the pink, to make seven reds in total.</item>
        <item>Pot the balls in order (i.e. red, colour, red, and so on), trying to make as high a break as possible.</item>
        <item>Can you clear the table?</item>
    </string-array>
    <string name="routine_5">Clearing the Colours</string>
    <string-array name="routine_5_desc_array">
        <item>Put all colours on their spots, then try to clear them in order, i.e. yellow, green, brown, blue, pink, black.</item>
    </string-array>
    <string name="routine_desc">Routine</string>
    <string name="description_text">Description</string>
    <string name="routine_image_content_desc">Image showing layout of routine</string>
    <string name="title_activity_fullscreen_routine_image">Routine Fullscreen Image</string>
    <string name="score_label">Score</string>
    <string name="submit_score">Submit</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="today_label">Today</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="enter_score_help">Enter score here</string>
    <string name="enter_valid_score_help">Please enter a valid score</string>
    <string name="success_message">Success!</string>
    <string name="failure_try_again_message">An error occurred. Please try again</string>
    <string name="view_all_scores_label">View All Scores</string>
    <string name="number_attempts_label">Attempts</string>
    <string name="best_score_label">Best</string>
    <string name="average_score_label">Average</string>
    <string name="time_period_label">Time Period</string>
    <string name="loading_label">Loading</string>
    <string name="unknown_label">Unknown</string>
    <string-array name="time_periods">
        <item>All time</item>
        <item>Last 120 days</item>
        <item>Last 90 days</item>
        <item>Last 60 days</item>
        <item>Last 30 days</item>
        <item>Last 10 days</item>
    </string-array>
    <string-array name="time_periods_numbers">
        <item>-1</item>
        <item>120</item>
        <item>90</item>
        <item>60</item>
        <item>30</item>
        <item>10</item>
    </string-array>
    <string name="view_on_graph_label">View on Graph</string>
    <string name="no_previous_attempts_label">No previous attempts</string>
    <string name="select_to_delete_label">Click a row to select</string>
    <string name="delete_label">Delete</string>
    <string name="selected_label">selected</string>
    <string name="deleted_label">deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_scores_question">Are you sure you want to delete?</string>
</resources>