<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.huwdunnit.snookerimprover.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.huwdunnit.snookerimprover.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_add_score"
        android:name="com.huwdunnit.snookerimprover.ui.addscore.AddScoreFragment"
        android:label="@string/title_add_score"
        tools:layout="@layout/fragment_add_score" />
    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.huwdunnit.snookerimprover.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />
</navigation>