<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stats.StatsFragment">

    <TextView
        android:id="@+id/spinner_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingTop="8dp"
        android:text="@string/routine_desc"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/routine_name_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:background="@drawable/rounded_corner_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_desc"
        app:layout_constraintTop_toTopOf="parent" />

   <Button
       android:id="@+id/view_all_scores_button"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/view_all_scores_label"
       android:padding="16dp"
       android:layout_marginTop="16dp"
       android:layout_marginStart="48dp"
       android:layout_marginEnd="48dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/routine_name_spinner" />

    <TextView
        android:id="@+id/routine_stats_title"
        android:layout_width="0dp"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/title_stats"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_all_scores_button"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
        android:id="@+id/stats_period_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingTop="8dp"
        android:text="@string/time_period_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routine_stats_title" />

    <Spinner
        android:id="@+id/stats_period_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:background="@drawable/rounded_corner_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stats_period_desc"
        app:layout_constraintTop_toBottomOf="@+id/routine_stats_title" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:padding="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stats_period_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/number_attempts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/number_attempts_label"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/number_attempts_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/loading_label"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@drawable/rounded_corner_bg_light"
        app:layout_constraintStart_toStartOf="@+id/stats_period_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/best_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/best_score_label"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/number_attempts_value" />

    <TextView
        android:id="@+id/best_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/loading_label"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@drawable/rounded_corner_bg_light"
        app:layout_constraintStart_toStartOf="@+id/stats_period_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_attempts_value" />

    <TextView
        android:id="@+id/average_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/average_score_label"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/best_value" />

    <TextView
        android:id="@+id/average_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/loading_label"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@drawable/rounded_corner_bg_light"
        app:layout_constraintStart_toStartOf="@+id/stats_period_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/best_value" />

    <Button
        android:id="@+id/view_graph_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_on_graph_label"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average_value" />

    <Button
        android:id="@+id/button_view_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="16dp"
        android:padding="16dp"
        android:text="@string/title_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"/>

    <Button
        android:id="@+id/button_add_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:padding="16dp"
        android:text="@string/title_add_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>