<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.InfoFragment">


    <TextView
        android:id="@+id/spinner_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingTop="8dp"
        android:text="@string/routine_desc"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/routine_name_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:background="@drawable/rounded_corner_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_desc"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/routine_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/routine_image_content_desc"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@+id/routine_name_spinner" />

    <TextView
        android:id="@+id/routine_desc_title"
        android:layout_width="0dp"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/description_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routine_image"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
        android:id="@+id/routine_desc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routine_desc_title"
        app:layout_constraintBottom_toTopOf="@id/button_add_score"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="vertical"/>

    <Button
        android:id="@+id/button_add_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="16dp"
        android:padding="16dp"
        android:text="@string/title_add_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:onClick="addScore"/>

    <Button
        android:id="@+id/button_view_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:onClick="viewStats"
        android:padding="16dp"
        android:text="@string/title_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>